# sudoku

./: .gitignore  LICENSE  MANIFEST.in  README.md  packageTest.py  pyproject.toml  setup.cfg
.github/workflows/: build-release.yml
examples/: generateSolve.py  validityCheck.py
src/sudoku/: __init__.py  _driver.py  _show_grid.py  _validty_check.py  checker.py  driver.py  generator.py  showGrid.py  solver.py  sudokuGenerator.py  sudokuSolver.py  validtyCheck.py
src/sudokugame.egg-info/: PKG-INFO  SOURCES.txt
sudoku/: generator.py
tests/: test_generator.py  test_solver.py  test_validityCheck.py
