[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudokugame"
version = "0.2.0"
authors = [
  { name="Don Sabu", email="donsabu@protonmail.com" },
]
description = "A Python package to generate sudoku"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["sudoku", "project"]