[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudokugame"
version = "1.1.2"
authors = [
  { name="Don Sabu", email="donsabu@protonmail.com" },
  { name="Aneeta Jose", email="aneetajose@tutanota.com" },
]
description = "A Python package to generate sudoku"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["sudoku", "project"]